<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo-t1_sqlite_listview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name Kunde</string>
    <string name="vorname">Vorname Kunde</string>
    <string name="bday">Geburtstag Kunde</string>
    <string name="foto">Foto Kunde</string>
    <string name="insert_success">Der Adressbucheintrag wurde erfolgreich angelegt.</string>
    <string name="insert_failure">Der Adressbucheintrag konnte nicht angelegt werden.</string>
    <string name="update_success">Der Adressbucheintrag wurde erfolgreich aktualisiert.</string>
    <string name="update_failure">Der Adressbucheintrag konnte nicht aktualisiert werden.</string>
    
    <string name="action_share">Teilen</string>
    <string name="action_search">Kontakt suchen</string>
    <string name="action_new">neuer Kontakt</string>       
    <string name="action_all_delete">alle Kontakte löschen</string>    
    <string name="delete_ok">Adressbuch wurde geleert</string>    
    
</resources>