<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_btn_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_menu_invite"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="101"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_all_delete"
                android:icon="@drawable/ic_delete"
                android:showAsAction="always|withText"
                android:title="@string/action_all_delete"/>
        </menu>
    </item>

</menu>